# ethrex_db

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: daily_loc.yaml  pr_loc.yaml
benches/: db_benchmark.rs
examples/: profiling.rs
src/: db.rs  file_manager.rs  index.rs  lib.rs  serialization.rs
src/ethrex/: mod.rs
src/ethrex/rlp/: mod.rs
src/ethrex/trie/: mod.rs  node_hash.rs
src/rlp/: decode.rs  encode.rs  error.rs  mod.rs  structs.rs
src/trie/: branch.rs  error.rs  extension.rs  iterator.rs  leaf.rs  mod.rs  nibbles.rs  node.rs  node_hash.rs  test_utils.rs  trie.rs
tooling/: Cargo.toml  Makefile
tooling/src/: main.rs  report.rs
