[package]
name = "loc"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
clap_complete = "4.4.3"
colored = "2.1.0"
prettytable = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.0"
spinoff = "0.8.0"
tokei = "12.1.2"
